--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,14 @@
   <meta charset="utf-8">
   <title>Coviditalyng</title>
   <base href="/">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+
+
+
+  <app-root>Loading...</app-root>
 </body>
 </html>
