--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Coviditalyng</title>
+  <title>#IORESTOACASA</title>
   <base href="/">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@https://io-restoacasa.web.app/">
+  <meta name="twitter:creator" content="CovidItaly community">
+  <meta name="twitter:title" content="#iorestoacasa">
+  <meta name="twitter:description"
+        content="Ciò che stiamo facendo è creare un servizio informazioni, aggiornato in tempo reale, relativo ad ospedali e supporto medico, attività produttive, servizi di approvvigionamento e molto altro. COVID-19">
+  <meta name="twitter:image" content="assets/card.jpg">
+
+  <!-- Facebook -->
+  <meta property="og:url" content="/">
+  <meta property="og:title" content="#iorestoacasa">
+  <meta property="og:description"
+        content="Ciò che stiamo facendo è creare un servizio informazioni, aggiornato in tempo reale, relativo ad ospedali e supporto medico, attività produttive, servizi di approvvigionamento e molto altro. COVID-19">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/card.jpg">
+  <meta property="og:image:secure_url" content="assets/card.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+
 </head>
 <body>
 
 
 
-  <app-root>Loading...</app-root>
+  <app-root><h2>Caricamento in corso...</h2></app-root>
 </body>
 </html>
