--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,20 @@
   <meta name="twitter:creator" content="CovidItaly community">
   <meta name="twitter:title" content="#iorestoacasa">
   <meta name="twitter:description"
-        content="Ciò che stiamo facendo è creare un servizio informazioni, aggiornato in tempo reale, relativo ad ospedali e supporto medico, attività produttive, servizi di approvvigionamento e molto altro. COVID-19">
-  <meta name="twitter:image" content="assets/card.jpg">
+        content="Seguendo quanto è stato fatto dalla comunità cinese di Whuan, vogliamo realizzare un servizio messo a disposizione di tutti gli Italiani, che permetta di avere in un unico posto informazioni in tempo reale relative ad ospedali, servizi di approvvigionamento, donazioni, comportamenti da adottare e molto altro. Siamo alla ricerca di tutti coloro che desiderano dare un contributo alla campagna contro il coronavirus, in modo che tutte le persone che possiedono le adeguate competenze possano contribuire al lavoro di sviluppo nell’ambito delle tematiche ad esse pertinenti e quindi, in accordo con la cultura della comunità Open Source, al raggiungimento del successo attraverso un approccio di cooperazione autogestita.">
+  <meta name="twitter:image" content="https://github.com/grausof/iorestoacasa/raw/master/screenshot.png?raw=true">
 
   <!-- Facebook -->
   <meta property="og:url" content="/">
   <meta property="og:title" content="#iorestoacasa">
   <meta property="og:description"
-        content="Ciò che stiamo facendo è creare un servizio informazioni, aggiornato in tempo reale, relativo ad ospedali e supporto medico, attività produttive, servizi di approvvigionamento e molto altro. COVID-19">
+        content="Seguendo quanto è stato fatto dalla comunità cinese di Whuan, vogliamo realizzare un servizio messo a disposizione di tutti gli Italiani, che permetta di avere in un unico posto informazioni in tempo reale relative ad ospedali, servizi di approvvigionamento, donazioni, comportamenti da adottare e molto altro. Siamo alla ricerca di tutti coloro che desiderano dare un contributo alla campagna contro il coronavirus, in modo che tutte le persone che possiedono le adeguate competenze possano contribuire al lavoro di sviluppo nell’ambito delle tematiche ad esse pertinenti e quindi, in accordo con la cultura della comunità Open Source, al raggiungimento del successo attraverso un approccio di cooperazione autogestita.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/card.jpg">
-  <meta property="og:image:secure_url" content="assets/card.jpg">
+  <meta property="og:image" content="assets/screenshot.png">
+  <meta property="og:image:secure_url" content="https://github.com/grausof/iorestoacasa/raw/master/screenshot.png?raw=true">
   <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
+  <meta property="og:image:width" content="2534">
+  <meta property="og:image:height" content="1414">
 
   
 </head>
