--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <meta http-equiv="pragma" content="no-cache">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>window.__PUBLIC_PATH__ = '/assets/fonts'</script>
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
