--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>#IORESTOACASA</title>
   <base href="/">
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
   <meta http-equiv="expires" content="0">
@@ -18,15 +18,13 @@
   <meta name="twitter:site" content="@https://io-restoacasa.web.app/">
   <meta name="twitter:creator" content="CovidItaly community">
   <meta name="twitter:title" content="#iorestoacasa">
-  <meta name="twitter:description"
-        content="Seguendo quanto è stato fatto dalla comunità cinese di Whuan, vogliamo realizzare un servizio messo a disposizione di tutti gli Italiani, che permetta di avere in un unico posto informazioni in tempo reale relative ad ospedali, servizi di approvvigionamento, donazioni, comportamenti da adottare e molto altro. Siamo alla ricerca di tutti coloro che desiderano dare un contributo alla campagna contro il coronavirus, in modo che tutte le persone che possiedono le adeguate competenze possano contribuire al lavoro di sviluppo nell’ambito delle tematiche ad esse pertinenti e quindi, in accordo con la cultura della comunità Open Source, al raggiungimento del successo attraverso un approccio di cooperazione autogestita.">
+  <meta name="twitter:description" content="Seguendo quanto è stato fatto dalla comunità cinese di Whuan, vogliamo realizzare un servizio messo a disposizione di tutti gli Italiani, che permetta di avere in un unico posto informazioni in tempo reale relative ad ospedali, servizi di approvvigionamento, donazioni, comportamenti da adottare e molto altro. Siamo alla ricerca di tutti coloro che desiderano dare un contributo alla campagna contro il coronavirus, in modo che tutte le persone che possiedono le adeguate competenze possano contribuire al lavoro di sviluppo nell’ambito delle tematiche ad esse pertinenti e quindi, in accordo con la cultura della comunità Open Source, al raggiungimento del successo attraverso un approccio di cooperazione autogestita.">
   <meta name="twitter:image" content="https://github.com/grausof/iorestoacasa/raw/master/screenshot.png?raw=true">
 
   <!-- Facebook -->
   <meta property="og:url" content="/">
   <meta property="og:title" content="#iorestoacasa">
-  <meta property="og:description"
-        content="Seguendo quanto è stato fatto dalla comunità cinese di Whuan, vogliamo realizzare un servizio messo a disposizione di tutti gli Italiani, che permetta di avere in un unico posto informazioni in tempo reale relative ad ospedali, servizi di approvvigionamento, donazioni, comportamenti da adottare e molto altro. Siamo alla ricerca di tutti coloro che desiderano dare un contributo alla campagna contro il coronavirus, in modo che tutte le persone che possiedono le adeguate competenze possano contribuire al lavoro di sviluppo nell’ambito delle tematiche ad esse pertinenti e quindi, in accordo con la cultura della comunità Open Source, al raggiungimento del successo attraverso un approccio di cooperazione autogestita.">
+  <meta property="og:description" content="Seguendo quanto è stato fatto dalla comunità cinese di Whuan, vogliamo realizzare un servizio messo a disposizione di tutti gli Italiani, che permetta di avere in un unico posto informazioni in tempo reale relative ad ospedali, servizi di approvvigionamento, donazioni, comportamenti da adottare e molto altro. Siamo alla ricerca di tutti coloro che desiderano dare un contributo alla campagna contro il coronavirus, in modo che tutte le persone che possiedono le adeguate competenze possano contribuire al lavoro di sviluppo nell’ambito delle tematiche ad esse pertinenti e quindi, in accordo con la cultura della comunità Open Source, al raggiungimento del successo attraverso un approccio di cooperazione autogestita.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/screenshot.png">
   <meta property="og:image:secure_url" content="https://github.com/grausof/iorestoacasa/raw/master/screenshot.png?raw=true">
@@ -34,14 +32,26 @@
   <meta property="og:image:width" content="2534">
   <meta property="og:image:height" content="1414">
 
-  
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/pwa-icons/icon-120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/pwa-icons/icon-152.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="assets/pwa-icons/icon-167.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/pwa-icons/icon-180.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa-icons/manifest-icon-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="assets/pwa-icons/manifest-icon-512.png">
+  <link rel="apple-touch-startup-image" href="images/splash/apple-splash-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="images/splash/apple-splash-750x1294.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="images/splash/apple-splash-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="images/splash/apple-splash-1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="images/splash/apple-splash-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="images/splash/apple-splash-2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
 </head>
 <body>
-
-
 
   <app-root><h2>Caricamento in corso...</h2></app-root>
 
 
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
