--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="2534">
   <meta property="og:image:height" content="1414">
+  <meta name="google-site-verification" content="JP733nY6TpsCe6PT_OW3i7qj3TTEZHCpMaxmMUB-YNA" />
 
   
 </head>
