--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,15 @@
   <link rel="apple-touch-startup-image" href="images/splash/apple-splash-1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
   <link rel="apple-touch-startup-image" href="images/splash/apple-splash-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
   <link rel="apple-touch-startup-image" href="images/splash/apple-splash-2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+  <!--CHATBOT
+  <link rel="stylesheet" href="https://desi.eu-de.mybluemix.net/css/app.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
+  <script src="https://desi.eu-de.mybluemix.net/js/common.js"></script>
+  <script src="https://desi.eu-de.mybluemix.net/js/api.js"></script>
+  <script src="https://desi.eu-de.mybluemix.net/js/conversation.js"></script>
+  <script src="https://desi.eu-de.mybluemix.net/js/payload.js"></script>
+  -->
 </head>
 <body>
 
@@ -54,5 +63,6 @@
 
 
   <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <div id="watsonconv-floating-box"></div>
 </body>
 </html>
